fix: profile-info text overflow

--- a/blocks/profile-info/__editable-text/profile-info__editable-text.css
+++ b/blocks/profile-info/__editable-text/profile-info__editable-text.css
@@ -1,12 +1,19 @@
 .profile-info__editable-text {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
   color: #fff;
+  box-sizing: border-box;
   margin: 26px 0 33px;
+  padding: 0 15px;
+  display: flex;
+  align-items: flex-start;
+  min-width: 0;
+  max-width: 100%;
 }
 
 @media screen and (min-width: 600px) {
   .profile-info__editable-text {
     align-self: flex-start;
     margin: 22px 30px 0 30px;
+    padding: 0;
   } 
 }
