--- a/blocks/profile-info/__profile-description/profile-info__profile-description.css
+++ b/blocks/profile-info/__profile-description/profile-info__profile-description.css
@@ -3,6 +3,9 @@
   font-size: 14px;
   line-height: 1.21;
   font-weight: 400;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: center;
 }
 
