--- a/blocks/profile-info/__profile-name/profile-info__profile-name.css
+++ b/blocks/profile-info/__profile-name/profile-info__profile-name.css
@@ -1,22 +1,24 @@
 .profile-info__profile-name {
-  margin: 0 10px 0 28px;
+  margin: 0 0 7px;
   font-size: 27px;
   line-height: 1.22;
   font-weight: 500;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: center;
 }
 
 @media screen and (min-width: 600px) {
   .profile-info__profile-name {
-    margin: 0 10px 0 0;
     text-align: left;
   }
 }
 
 @media screen and (min-width: 950px) {
   .profile-info__profile-name {
+    margin-bottom: 8px;
     font-size: 42px;
     line-height: 1.14;
-    margin-right: 18px;
   }
 }
